spacing fix

--- a/src/pages/about/index.module.css
+++ b/src/pages/about/index.module.css
@@ -128,7 +128,7 @@
 .skillsWrapper {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 0.4rem;
 }
 .skillCategory h4 {
   margin-bottom: 0.5rem;
